--- a/package.json
+++ b/package.json
@@ -11,14 +11,16 @@
     "test": "jest --projects --runInBand"
   },
   "dependencies": {
+    "@types/express": "^4.17.12",
     "express": "^4.17.1",
-    "@types/express": "^4.17.12"
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@types/jest": "^26.0.23",
-    "eslint": "^7.27.0",
-    "@typescript-eslint/parser": "^4.25.0",
+    "@types/uuid": "^8.3.0",
     "@typescript-eslint/eslint-plugin": "^4.25.0",
+    "@typescript-eslint/parser": "^4.25.0",
+    "eslint": "^7.27.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-config-prettier": "^8.3.0",
     "eslint-import-resolver-typescript": "^2.4.0",
