chore: Add new rule on eslint

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -58,7 +58,7 @@
 			],
 			"import/no-extraneous-dependencies": [
 			  "error",
-			  { "devDependencies": ["**/*.test.ts", "**/*.test.tsx"]}
+			  { "devDependencies": true}
 			]
     },
     "settings": {
